@@ -17,7 +17,7 @@
 <h3><font color="yellow">NEWS FLASH!</font></h3>
 <p>
 <!--FVWM 2.4.0, an official release, is now available for download!-->
-FVWM 2.3.31, a stable candidate release is now available for download!
+FVWM 2.3.32, a stable candidate release is now available for download!
 </blockquote>
 <hr>
 
@@ -28,7 +28,7 @@ manager for the X Window system. <a href="download.html">Get</a> your copy.
 <blockquote>
 <table border=0 cellpadding=0 cellspacing=0>
   <tr><td>Latest Stable Release: &nbsp;<td><b>2.2.5</b></tr>
-  <tr><td>Latest Beta Release:   &nbsp;<td><b>2.3.31</b></tr>
+  <tr><td>Latest Beta Release:   &nbsp;<td><b>2.3.32</b></tr>
 </table>
 </blockquote>
 
@@ -62,6 +62,6 @@ manager for the X Window system. <a href="download.html">Get</a> your copy.
 
 <hr>
 Created: Jan 31, 1996 *
-Last modified: Mar 30, 2001
+Last modified: May 04, 2001
 </body>
 </html>
