@@ -1,3 +1,7 @@
+2001-05-04  Jason L Tibbitts III  <tibbs@math.uh.edu>
+
+	* download.html, index.html: update for 2.3.32.
+
 2001-05-01  Dan Espen  <dane@mk.telcordia.com>
 
 	* generated/FAQ.html: Regenerated FAQ.
